# Test-Data-Mining-Agent

./: .gitignore  CLAUDE.md  DATA.md  README.md  UNDERSTANDING.md  pyproject.toml  requirements.txt
backend/: app.py
data/golden/: expectations_v2.json  flaky_labels.json  manifest.json
data/sample_mongo/: customer_profiles_v1.json  order_flow_v1.json  order_flow_v2.json
data/sample_upload/: run_0.xml  run_1.xml  run_2.xml  run_3.xml  run_4.xml  run_5.xml
docs/: ARCHITECTURE.md  BACKEND.md  BUILD-PLAN.md  CONTEXT.md  DATA-FLOW.md  UNDERSTANDING.md  demo-overview.md  test-data-mining.md
docs/archive/: ARCHITECTURE.md  BUILD-PLAN-v3.md  CONTEXT-v3.md  FIXES-seed-and-negatives.md  IMPROVEMENT-2.md  IMPROVEMENT.md  README.md  ROADMAP.md  TDM-PIVOT-v2.md  UNDERSTANDING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  download.js  index.css
scripts/: check_embedding_offline.py  generate_fixtures.py  measure_similarity.py  run_demo.ps1  run_demo.sh  score_golden.py
src/test_data_mining/: __init__.py  embedding.py  graph.py  inference.py  llm.py  state.py
tests/: test_additive_output.py  test_adversarial.py  test_backend.py  test_coherence.py  test_coverage_gap.py  test_embedding_local.py  test_failure_clustering.py  test_flaky_detect.py  test_generate.py  test_generate_more.py  test_integration.py  test_load_results.py  test_mongo_lookup.py  test_parse.py  test_persist.py  test_provenance.py  test_synthesis_persist.py  test_universality_e2e.py  test_validate.py  test_vector_search.py
(+25 files in other folders)
